--- a/src/pages/add-farm/add-farm.scss
+++ b/src/pages/add-farm/add-farm.scss
@@ -1,3 +1,17 @@
-page-add-farm {
-
+.ios, .md {
+ 
+    page-add-farm {
+ 
+      .scroll {
+        height: 100%
+      }
+ 
+      #map {
+        width: 100%;
+        height: 100%;
+      }
+ 
+    }
+ 
 }
+
