--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,19 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.flower {
+	color: #ffa126;
+}
+
+.water {
+	color: #316ec4;
+}
+
+.leaf {
+	color: #2e7a38;
+}
+
+.filing {
+	color: #2d2d2d;
+}
