Labels, graph, slides, fix

--- a/src/pages/crop-history/crop-history.scss
+++ b/src/pages/crop-history/crop-history.scss
@@ -3,15 +3,27 @@ page-crop-history {
 	.four{
 		width:25%;
 
-border: think solid black;
-}
+		border: think solid black;
+	}
+
+	.five{
+		width:20%;
+
+		border: think solid black;
+	}
+
+	.six{
+		width:16%;
+
+		border: think solid black;
+	}
 	
 
-.table{
-font-size: 20px;
-font-weight: bold;
-text-decoration: underline;
+	.table{
+		font-size: 20px;
+		font-weight: bold;
+		text-decoration: underline;
 
-}
+	}
 
 }
