--- a/src/pages/add/add.scss
+++ b/src/pages/add/add.scss
@@ -1,4 +1,3 @@
-.ios, .md {
 page-add {
 
         p {
@@ -7,23 +6,23 @@ page-add {
         }
 
  
-        ion-label, .select-text {
+        .ion-label, .select-text {
             margin-left: 10px;
         }
  
-        ion-input, ion-select, ion-textarea {
+        .ion-input, .ion-select, .ion-textarea {
             padding: 5px 10px;
         }
 
         .icon {
-        font-size: 32px;
-}
+            font-size: 32px;
+        }
 
 .round-button {
-    width: 80%;
-    height: 10;
+    width: 42px;
+    height: 42px;
     padding-bottom: 0.02%;
-    border-radius: 60%;
+    border-radius: 100%;
     border: 2px solid #f5f5f5;
     overflow: hidden;
     background: #464646;
@@ -41,5 +40,3 @@ page-add {
  
 }
 
-
-}
