info , about , table

--- a/src/pages/crop-history/crop-history.scss
+++ b/src/pages/crop-history/crop-history.scss
@@ -16,8 +16,12 @@ page-crop-history {
 		width:16%;
 
 		border: think solid black;
+		
 	}
 	
+	.col{
+border: think solid black;
+}
 
 	.table{
 		font-size: 20px;
